Fix the PiP window jumping around on Mac.

The PiP window has a simple layer tree and triggers the FSLP code path.
But, this path didn't previously consider the video layer part of the
area that needs a backdrop, so the backdrop layer (the root layer) was
made too small.

It would be better if this code just had access to the size of the page
instead of having to guess by looking at the layer tree, but I don't
think it does right now.

Bug: 863580
Change-Id: Ib2e9ae24e98932b77b365a985dc956aa08287eb7
Reviewed-on: https://chromium-review.googlesource.com/1140923
Reviewed-by: ccameron <ccameron@chromium.org>
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576182}
Former-commit-id: 1f3779f93a1cd3e8b8238f33753c1996af1e20c8